@@ -1,4 +1,5 @@
 co.elastic.apm.agent.springwebmvc.SpringTransactionNameInstrumentation
+co.elastic.apm.agent.springwebmvc.ServletWrappingControllerServiceNameInstrumentation
 co.elastic.apm.agent.springwebmvc.ViewRenderInstrumentation
 co.elastic.apm.agent.springwebmvc.SpringServiceNameInstrumentation
 co.elastic.apm.agent.springwebmvc.ExceptionHandlerInstrumentation
