@@ -1,66 +1,0 @@
-/*-
- * #%L
- * Elastic APM Java agent
- * %%
- * Copyright (C) 2018 - 2020 Elastic and contributors
- * %%
- * Licensed to Elasticsearch B.V. under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch B.V. licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *   http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
- * #L%
- */
-package co.elastic.apm.agent.springwebmvc;
-
-import co.elastic.apm.agent.AbstractInstrumentationTest;
-import co.elastic.apm.agent.impl.transaction.Transaction;
-import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.Test;
-import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.setup.MockMvcBuilders;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RestController;
-
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
-
-class ApmHandlerInterceptorTest extends AbstractInstrumentationTest {
-
-    private static MockMvc mockMvc;
-
-    @BeforeAll
-    static void prepare() {
-        mockMvc = MockMvcBuilders.standaloneSetup(new TestController()).build();
-    }
-
-    @Test
-    void getAccount() throws Exception {
-        mockMvc.perform(get("/test"))
-            .andExpect(content().string("TestController#test"));
-    }
-
-    @RestController
-    public static class TestController {
-
-        @GetMapping("/test")
-        public CharSequence test() {
-            final Transaction currentTransaction = tracer.currentTransaction();
-            assertThat(currentTransaction).isNotNull();
-            return currentTransaction.getNameAsString();
-        }
-    }
-
-}
