@@ -38,6 +38,7 @@ endif::[]
 * Add the ability to disable Servlet-related spans for `INCLUDE`, `FORWARD` and `ERROR` dispatches (without affecting
   basic Servlet capturing) by adding `servlet-api-dispatch` to <<config-disable-instrumentations>> - {pull}1448[1448]
 * Add Sampling Profiler support for AArch64 architectures - {pull}1443[1443]
+* Support proper transaction naming when using Spring's `ServletWrappingController` - {pull}1461[#1461]
 
 [float]
 ===== Bug fixes
